# libFakeNvXinerama

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
extra/: fakenvxinerama
man/: Makefile.am  Makefile.in
src/: FakeNvXinerama.c  Makefile.am  Makefile.in  NVCtrl.c  Xinerama.c  libFakeNvXinerama.c  nv_hw.h  nv_objects.h
